@startuml
'https://plantuml.com/class-diagram

class Solution44
{
+void main
+string input()
+boolean output()
}

class inventory
{
+ void product
+Product search(String name)
}

class product
{
 + Product(String name, double price, int quantity)
    + String getName()
    + double getPrice()
    + int getQuantity()
}

product --> inventory
Solution44 --> inventory
@enduml